# OPERA

./: .gitattributes  ACKNOWLEDGEMENTS  AUTHORS  COPYING  ChangeLog  DISCLAIMER  INSTALL_OPERA-1.0.sh  LICENSE  Makefile.am  Makefile.in  NEWS  TIMESTAMP  configure  configure.ac  exclude.lst  fullbuild.sh  fullclean.sh  setup.sh
autoconf/: README  bootstrap.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
config/: HITRAN-NOTES.txt  PI_email_list.txt  PI_email_step_one.txt  PI_email_step_three.txt  PI_email_step_two.txt  PI_emailform.txt  badpix_eev  badpix_eeveng  badpix_olapa-a  badpix_olapa-ab  flat_resp.s  flat_resp_olapa.s  sextractor.xsl  skyline_skycal-Eso_mod.txt  sourcelinesForRVMeasurements.txt  wavelengthMaskForRefContinuumDetection.txt  wavelengthMaskForUncalContinuumDetection.txt
config/solar-reference-spectrum/: convert-to-opera-format.txt  sunspec.ref
config/standardstars/: aaareadme.ctio  convert-to-operaformat.txt  how-to-create-fcal-file.txt  readme.txt
config/syntethicSpectra/: M_s5500g3.0z0.25t1.0_a0.00c0.00n0.00o0.00r0.00s0.00_VIS.spec.txt
doc/: index.html
doc/espectro/: Comments_for_Developers  Dependencies  Installation  Main_page  OPERA_Overview  Pipeline_Steps  Running_OPERA
extras/doc/: mainpage.txt
extras/scripts/sitelle/: Makefile.am  Makefile.in  ds9sitelle
extras/test/: operaMEFCubeTest.cpp  operaMEFFITSImageTest.cpp  operaWIRCamImageTest.cpp
harness/: Makefile  README
harness/espadons/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.upena  Makefile.util
harness/graces/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.upena  Makefile.util
harness/guest/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.util
harness/narval/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.upena  Makefile.util
include/: globaldefines.h  operaError.h
include/analysis-espadons/: operaBinFluxData.h  operaRadialVelocity.h
include/core-espadons/: operaExtendedSpectrumCreation.h  operaMasterCalibration.h  operaReductionSet.h  operaTelluricWavelengthCorrection.h  operaWavelengthCalibration.h
include/core-wircam/: wirAstrometry.h  wirCreateSky.h  wirCreateZeroPoints.h  wirDetrend.h  wirMasterDark.h  wirMasterTwilightFlat.h  wirPhotometry.h  wirPickSkies.h  wirPickTwilightFlats.h  wirSkyFlat.h  wirSubtractSky.h  wirTwilightFlat.h
include/libraries/: ArgumentHandler.h  GainBiasNoise.h  Gaussian.h  LaurentPolynomial.h  PixelSet.h  Polynomial.h  VLArray.h  gzstream.h  ladfit.h  mpfit.h  operaArgumentHandler.h  operaCCD.h  operaCommonModuleElements.h  operaConfigurationAccess.h  operaDateTime.h  operaEspadonsImage.h  operaEspadonsSubImage.h  operaException.h  operaExtractionAperture.h  operaFFT.h  operaFITSCube.h  operaFITSImage.h  operaFITSImageVector.h  operaFITSProduct.h  operaFITSSubImage.h  operaFit.h  operaFluxVector.h  operaGeometricShapes.h  operaGeometry.h  operaIOFormats.h  operaImage.h  operaImageVector.h  operaInstrumentEnvironmentSetup.h  operaInstrumentProfile.h  operaLMFit.h  operaLib.h  operaLibCommon.h  operaMEFFITSProduct.h  operaMath.h  operaMatrix.h  (+25 more)
include/tools/: opera.h  operaConfigurationAccess.h  operaConvert2ampTo1amp.h  operaCreateBadpixMask.h  operaEspadonsETC.h  operaExtractRawSum.h  (+8 more)
scripts/: .operacomparetrees.swp  Makefile.am  Makefile.in  README  domacmake  operaPristine  operacount  operadiff  operafind  operafindheader  operafindword  operafitsverify  operagetmode  operagetword  operagetwords  operagnuplot  operainstallweb  operalinecount  operaslice  operasplit  operasublist  operatrace  operatrim
scripts/espadons/: Makefile.am  Makefile.in  ds9opera  espcreatewaimealinkdirectory  espdimm  espgetobscomment  espqldaemon  espskyprobe  espxexpdb  opera.sh  operachecksnr  operagetamplifier  operagetdaterange  operagetdetector  operagetgainnoise  operagetpolarquad  operagetpolarsequence  operagetspeed  operagetstokes  operareport
scripts/graces/: calibration_ESPaDOnS.sh  full_reduction_ESPaDOnS.sh  reduction_ESPaDOnS.sh
scripts/guest/: Makefile.am  Makefile.in
src/core-guest/: Makefile.am  Makefile.in  extraction.cpp
src/libraries/: ArgumentHandler.cpp  GainBiasNoise.cpp  Gaussian.cpp  LaurentPolynomial.cpp  Makefile.am  Makefile.in  PixelSet.cpp  Polynomial.cpp  gzstream.cpp  ladfit.c  mpfit.c  operaArgumentHandler.cpp  operaCCD.cpp  operaCommonModuleElements.cpp  operaConfigurationAccess.c  operaDateTime.cpp  operaEspadonsImage.cpp  operaEspadonsSubImage.cpp  operaException.cpp  operaExtractionAperture.cpp  operaFFT.c  operaFITSCube.cpp  operaFITSImage.cpp  operaFITSProduct.cpp  operaFITSSubImage.cpp  operaFit.c  operaFluxVector.cpp  operaGeometricShapes.cpp  operaGeometry.cpp  operaIOFormats.cpp  operaImage.c  operaImageVector.cpp  operaInstrumentEnvironmentSetup.cpp  operaInstrumentProfile.cpp  operaLMFit.c  operaLib.cpp  operaMEFFITSProduct.cpp  operaMath.c  operaMatrix.cpp  operaMuellerMatrix.cpp  (+21 more)
test/: FITSImageVectorTest.cpp  Makefile.am  Makefile.in  README  SBIGtest.cpp  balmer-series.sh  basicFITSImageTest.cpp  gzstreamtest.cpp  howtogenerateOperaUpenaComparisonPlots.sh  nancheck.cpp  operaAOBImageTest.cpp  operaAsmTest.cpp  operaConfigurationAccesstest.cpp  operaConfigurationAccesstest.h  operaCreateInstrumentEnvironmentSetup.cpp  operaCreateInstrumentEnvironmentSetup.h  operaCubeTest.cpp  operaEspadonsImageTest.cpp  operaExtractionApertureTest.cpp  operaFITSImageTest.cpp  operaFITSImageTest.h  operaFITSProductTest.cpp  operaFITSSubImageTest.cpp  operaFITSSubImageTest.h  operaFitLibTest.c  operaFluxVectorTest.cpp  operaGeometricShapesTest.cpp  operaImageOperatorTest.cpp  operaImageOperatorTest.h  operaJDTest.c  operaMPFitLibTest.c  operaMathLibTest.c  operaMatrixLibTest.c  operaNICIImageTest.cpp  operaNIFSImageTest.cpp  operaOESTest.cpp  operaPolarTest.cpp  operaPolarimetryTest.cpp  operaSextractorTest.cpp  operaStatsLibTest.c  (+9 more)
(+187 files in other folders)
