#
# bash helper scripts for opera
#
bin_SCRIPTS = operafindheader operadiff domacmake operalinecount operagnuplot \
	operafind operafindword operaPristine operatrace operacount operagetword \
	operasublist operaslice operafitsverify operatrim operasplit \
	operagetwords operagetmode operainstallweb ds9v4
