############################################################################################
#
# guest bash helper scripts for opera
# add in your script names here so they will get installed properly.
#
############################################################################################
bin_SCRIPTS = 
