############################################################################################
#
# sitelle  for opera
# add in your script names here so they will get installed properly.
#
############################################################################################
bin_SCRIPTS = ds9sitelle
